    - Marked native clients implementation to deprecated in favour of super clients (margaretha)
    - Enabled using Bearer tokens as user authentication tokens (Authorization header value) for many 
      controllers including OAuth2 controllers (margaretha)
16/08/2018
    - Implemented degrading super clients (margaretha)
    - Improved and added OAuth2 tests (margaretha)    


# version 0.60.5

09/07/2018
	- Added service layer to the search controller (margaretha)
	- Added OAuth2 scope checking in search and VC controllers (margaretha)
	- Added handling OAuth2 bearer token for VC access and User group controllers (margaretha)
	- Added default scope to password grant (margaretha)
10/07/2018
	- Made createBasicAuthorizationHeaderValue static (margaretha)
	- Added store access token in openID token service (margaretha)
	- Fixed empty scope in openID authorization and token service (margaretha)
	- Implemented storing authorization code in cache (margaretha)
11/07/2018	
	- Fixed authentication time in authentication controller (margaretha)
	- Added OAuth2 access token tests (margaretha)
12/07/2018	
	- Updated maven surefire setting for faster test suite runtime (margaretha)
	- Implemented refreshing OAuth2 access token (margaretha)
26/07/2018	
	- Fixed issue #27 (margaretha)
02/08/2018	
	- Fixed clientId encoding in OAuth2ClientControllerTest (margaretha)

	
# version 0.60.4

05/07/2018
    - implemented OAuth2 authorization code request with OpenID Authentication (margaretha)
    - enabled OAuth2 authorization without OpenID authentication using Nimbus library (margaretha)
    - implemented response handler for OpenID authentication errors in authorization requests (margaretha)
    - added tests regarding OpenID authentication in authorization requests (margaretha)
    - implemented OAuth2 authorization error response via redirect URI instead of JSON (margaretha)
    - added state to OAuth2 authorization error response (margaretha)